# vendie

./: README.md  Vendie.py  Vendie2.py  pyproject.toml  testhex.py
Original Code/: Vendie.py
Tests/: test-commands.py  test-nestedenum.py  test-sertial.py  testing.py
archive/: Vendie.py
data/: test_cards.json
spoofer/: __init__.py
spoofer/serial/: __init__.py  serial.py  tools.py
src/vendie/: __init__.py  __main__.py  cashless_device.py  commands.py  config.py  responses.py  vending_machine_commands.py
src/vendie/vending_machine/: __init__.py  commands.py  responses.py
tests/: test_vendie.py
vendie/: __main__.py  cashless_device.py  config.py  serial_factory.py  states.py
